# bozVideo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  project.config  tools.cmake
ext_build/: boz-build.cmake  boz-qt5.cmake
include/: boz-video-entry.h  boz-video.h
package/: package.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  bozv_close.c  bozv_internal.c  bozv_open.c
src/lib/boz/: bozv_internal_p.h  bozv_p.h
src/lib/entry/: CMakeLists.txt  _bozv_entry_check_rootpath.c  bozv_entry_delete.c  bozv_entry_internal.c  bozv_entry_new.c  bozv_entry_set_rootpath.c  bozv_entry_seturi.c
src/lib/entry/boz/: bozv_entry_internal_p.h
src/lib/main/: CMakeLists.txt  bozv_open.c
src/lib/main/boz/: bozv_internal_p.h
src/qt5webplugin/: CMakeLists.txt
src/qt5webplugin/factory/: BozBrowser.cpp  BozBrowser.h  BozWebpage.cpp  BozWebpage.h  CMakeLists.txt  main.cpp
src/qt5webplugin/include/: QBozAbstractVidPlayer.h  QBozQtAVVidPlayer.h
src/qt5webplugin/vidplayer/: .directory  CMakeLists.txt  QBozAbstractVidPlayer.cpp  QBozQtAVVidPlayer.cpp
test/lib/: CMakeLists.txt  basic.c  basic.cmake  cu_bozvideo.h  cu_main.c  cu_suite.c  cunit.cmake
test/lib/entry/: basic.c  basic.cmake  cu_bozvideo.h  cu_main.c  cu_rootpath.c  cunit.cmake
test/lib/main/: basic.cmake  cu_init_term.c  cunit.cmake
